--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -210,7 +210,7 @@ $ 2021
 @article{zhang2025realistic,
   keywords={preprint},
   title={Realistic Simulation of Item Difficulties},
-  author={Zhang, Lijin and Liu, Yiqing and Molenaar, Dylan Gilbert, Josh and Kanopka, Klint and Domingue, Benjamin W},
+  author={Zhang, Lijin and Liu, Yiqing and Molenaar, Dylan and Gilbert, Josh and Kanopka, Klint and Domingue, Benjamin W},
   year={2025},
   journal={PsyArXiv}
 }
@@ -311,331 +311,3 @@ $ 2021
   journal={Policy Analysis for California Education},
   year={2020}
 }
-
-
-%%%%%%%%%%%%%%%%%
-% Invited Talks %
-%%%%%%%%%%%%%%%%%
-
-@conference{kanopka2024fordham,
-  keywords={invtalk,selected},
-  author={Kanopka, Klint},
-  title={A Position-Sensitive Mixture Item Response Model},
-  year={2024},
-  organization={Fordham Psychometrics Seminar at Fordham University}
-}
-
-@conference{kanopka2023shre,
-  keywords={invtalk,selected},
-  author={Kanopka, Klint and Moeller, Kathryn},
-  title={Following the capital: Using Investment Networks to Understand Venture Capital’s Influence on Education},
-  year={2023},
-  organization={Society for Research into Higher Education Digital University Network Event on the Political Economy of EdTech}
-}
-
-@conference{kanopka2021bear,
-  keywords={invtalk,selected},
-  author={Kanopka, Klint},
-  title={Good Luck with the Blue Book! An IRT Mixture Model for Position Effects},
-  year={2021},
-  organization={Berkeley Evaluation \& Assessment Research (BEAR) Seminar at UC Berkeley}
-}
-
-
-
-%%%%%%%%%%%%%%%%%%%%
-% Conference Talks %
-%%%%%%%%%%%%%%%%%%%%
-
-@conference{lu2025lassoshortform,
-  keywords={student,conftalk},
-  author={Lu, Yining and Huang, Yuan and Kanopka, Klint},
-  title={Assessing the Representativeness of LLM-Generated Item Responses Using Latent Class Analysis},
-  year={2025},
-  organization={Annual Meeting of the National Council on Measurement in Education}
-} 
-
-@conference{kanopka2025polypredict,
-  keywords={conftalk},
-  author={Kanopka, Klint},
-  title={Prediction quality of a range of polytomous models applied to a large data corpus},
-  year={2025},
-  organization={Annual Meeting of the National Council on Measurement in Education}
-} 
-
-@conference{kanopka2025mcmcshortform,
-  keywords={conftalk},
-  author={Kanopka, Klint and Zhang, Xiaoxuan and Harel, Daphna},
-  title={A Markov Chain Monte Carlo Procedure with Simulated Annealing for Short Form Creation},
-  year={2025},
-  organization={International Objective Measurement Workshop}
-} 
-
-
-@conference{kanopka2024lassoshortform,
-  keywords={conftalk},
-  author={Kanopka, Klint and Harel, Daphna},
-  title={A LASSO approach for short form item selection},
-  year={2024},
-  organization={International Meeting of the Psychometric Society}
-} 
-
-@conference{domingue2024irwtalkimps,
-  keywords={conftalk},
-  author={Domingue, Benjamin W. and Kanopka, Klint and Braginksy, Mika and Zhang, Lijin and Caffrey-Maffei, Lucy and Kapoor, Radhika and Liu, Yiqing and Zhang, Susu and Frank, Mike},
-  title={The Item Response Warehouse (IRW): A Large Open Repository of Response Data},
-  year={2024},
-  organization={Annual Meeting of the National Council on Measurement in Education}
-}
-
-@conference{domingue2024impprobtalk,
-  keywords={conftalk},
-  author={Domingue, Benjamin W. and Kanopka, Klint and Ulitzsch, Esther and Zhang, Lijin},
-  title={Implied Probabilities of Polytomous Response Functions for Model-Based Prediction and Comparison},
-  year={2024},
-  organization={Annual Meeting of the National Council on Measurement in Education}
-}
-
-@conference{domingue2024irwtalk,
-  keywords={conftalk},
-  author={Domingue, Benjamin W. and Kanopka, Klint and Caffrey-Maffei, Lucy and Kapoor, Radhika and Zhang, Susu and Liu, Yiqing},
-  title={The Item Response Warehouse (IRW): A Large Open Repository of Response Data},
-  year={2024},
-  organization={Annual Meeting of the National Council on Measurement in Education}
-}
-
-@conference{kapoor2023orpe,
-  keywords={conftalk},
-  author={Kapoor, Radhika and Ruiz-Primo, Maria Araceli and Hernandez, Phil and Kanopka, Klint},
-  title={Online Response Process Procedures: Affordances and Constraints to Collect, Analyze, and Interpret Validity Information},
-  year={2023},
-  organization={Annual Meeting of the American Educational Research Association}
-}
-
-@conference{wang2023context,
-  keywords={conftalk},
-  author={Wang, Nixi and Li, Min and Kanopka, Klint and Dong, Dongsheng and Hernandez, Phil and Ruiz-Primo, Maria Araceli},
-  title={Modeling Context Characteristics for Contextualized Assessment: A Bayesian Contextualized Item Response Model},
-  year={2023},
-  organization={Annual Meeting of the National Council on Measurement in Education}
-}
-
-@conference{domingue2023imvirt,
-  keywords={conftalk},
-  author={Domingue, Benjamin W. and Kanopka, Klint and Kapoor, Radhika and Pohl, Steffi and Chalmers, R. Phillip and Rahal, Charles and Rhemtulla, Mijke},
-  title={Applying the Intermodel Vigorish to Quantify the Value of Item Response Modeling},
-  year={2023},
-  organization={Annual Meeting of the National Council on Measurement in Education}
-}
-
-@conference{kanopka2023ddm,
-  keywords={conftalk},
-  author={Kanopka, Klint and Yeatman, Jason and Burkhardt, Amy},
-  title={Incorporating Response Time Using Drift Diffusion Models in an Online Reading Assessment},
-  year={2023},
-  organization={Annual Meeting of the National Council on Measurement in Education}
-}
-
-@conference{ulitzsch2023filtering,
-  keywords={conftalk},
-  author={Ulitzsch, Esther and Rios, Joseph A. and Kapoor, Radhika and Kanopka, Klint and Domingue, Benjamin W.},
-  title={A Probabilistic Filtering Approach to Accounting for Noneffortful Responding},
-  year={2023},
-  organization={Annual Meeting of the National Council on Measurement in Education}
-}
-
-@conference{kanopka2023essays,
-  keywords={conftalk},
-  author={Kanopka, Klint and Lang, David and Alvero, Aaron},
-  title={Weighing Algorithmic Tradeoffs: Observations from 60,000 Admission Essays},
-  year={2023},
-  organization={Annual Meeting of the National Council on Measurement in Education}
-}
-
-@conference{kapoor2023angrist,
-  keywords={conftalk},
-  author={Kapoor, Radhika and Kanopka, Klint and Domingue, Benjamin W.},
-  title={Revisiting Angrist et al. (2021): Merging International Assessment Data Is Not Easy},
-  year={2023},
-  organization={Annual Meeting of the National Council on Measurement in Education}
-}
-
-
-@conference{kanopka2023investment,
-  keywords={conftalk},
-  author={Kanopka, Klint and Hook, Tyler J.},
-  title={Following the capital: Using Investment Networks to Understand Venture Capital’s Influence on Education},
-  year={2023},
-  organization={Annual Meeting of the Comparative and International Education Society}
-}
-
-@conference{kanopka2023cmpolyimv,
-  keywords={conftalk},
-  author={Kanopka, Klint and Domingue, Benjamin W.},
-  title={Projecting the performance of polytomous item response models onto a common scale with the InterModel Vigorish},
-  year={2023},
-  organization={International Conference on Computational and Methodological Statistics}
-}
-
-@conference{kanopka2023iomwimv,
-  keywords={conftalk},
-  author={Kanopka, Klint and Domingue, Benjamin W. and Ulitzsch, Esther and Kapoor, Radhika and Pohl, Steffi and Chalmer, R. Phillip and Rahal, Charles and Rhemtulla, Mijke},
-  title={Bookmaking for Item Responses: Prediction, Profits, and the IMV},
-  year={2023},
-  organization={International Objective Measurement Workshop}
-}
-
-@conference{kanopka2022ets,
-  keywords={conftalk},
-  author={Kanopka, Klint},
-  title={Profiling Changes in Student Writing: From Failure to Success},
-  year={2022},
-  organization={Annual Meeting of the National Council on Measurement in Education}
-}
-
-@conference{moeller2022edtechvc,
-  keywords={conftalk},
-  author={Moeller, Kathryn and Kanopka, Klint},
-  title={Who Profits from EdTech? An Intersectional Feminist Analysis of Venture Capital Investment in Education},
-  year={2022},
-  organization={Annual Meeting of the American Educational Research Association}
-}
-
-@conference{kanopka2022compvalidity,
-  keywords={conftalk},
-  author={Kanopka, Klint and Domingue, Benjamin W.},
-  title={Good Luck with the Blue Book: Computational Approaches to Fairness and Validity in Admissions Testing},
-  year={2022},
-  organization={Annual Meeting of the American Educational Research Association}
-}
-
-@conference{kanopka2021bluebook,
-  keywords={conftalk},
-  author={Kanopka, Klint and Domingue, Benjamin},
-  title={Addressing the Blue Book Problem: Application of a Position-Sensitive IRT Mixture Model to ENEM 2014},
-  year={2021},
-  organization={International Meeting of the Psychometric Society}
-}
-
-@conference{kanopka2021psirt,
-  keywords={conftalk},
-  author={Kanopka, Klint and Domingue, Benjamin W.},
-  title={An IRT Mixture Model for Item Position Effects},
-  year={2021},
-  organization={Annual Meeting of the National Council on Measurement in Education}
-}
-
-@conference{moeller2021aera,
-  keywords={conftalk},
-  author={Moeller, Kathryn and Kanopka, Klint and French, Jo},
-  title={Venture Capitalists as Educational Actors: Understanding the Racialized Political Economy of Silicon Valley Investments in Education Technology},
-  year={2021},
-  organization={Annual Meeting of the American Educational Research Association}
-}
-
-@conference{moeller2021cies,
-  keywords={conftalk},
-  author={Moeller, Kathryn and Kanopka, Klint and French, Jo},
-  title={Venture Capitalists as Educational Actors: Understanding the Racialized Political Economy of Silicon Valley Investments in Education Technology},
-  year={2021},
-  organization={Annual Meeting of the Comparative and International Education Society}
-}
-
-@conference{kanopka2021mca,
-  keywords={conftalk},
-  author={Kanopka, Klint and Hernandez, Phil and Wang, Nixi and Ruiz-Primo, Maria Araceli and Li, Min and Minstrell, Jim},
-  title={An Application of Multiple Correspondence Analysis to the Experimental Study of Item Context},
-  year={2021},
-  organization={Annual Meeting of the American Educational Research Association}
-}
-
-@conference{ruizprimo2021context,
-  keywords={conftalk},
-  author={Ruiz-Primo, Maria Araceli and Li, Min and Kanopka, Klint and Hernandez, Phil and Dong, Dongsheng and Wang, Nixi and  Minstrell, Jim},
-  title={Analysis and review of context in science: Effects in student performance},
-  year={2021},
-  organization={Annual Meeting of the American Educational Research Association}
-}
-
-@conference{alvero2020call,
-  keywords={conftalk},
-  author={Alvero, Aaron and Sedlacek, Quentin and Kanopka, Klint},
-  title={A Call for Critical and Constructive Data Science in Teacher Eduaction},
-  year={2020},
-  organization={AERA Conference on Educational Data Science}
-}
-
-@conference{claro2020sel,
-  keywords={conftalk},
-  author={Claro, Susana and Kanopka, Klint and West, Martin and Loeb, Susanna and Fricke, Hans},
-  title={Exploring the relationship Between Changes in Social-Emotional skills and Achievement},
-  year={2020},
-  organization={Annual Meeting of the American Educational Research Association (Conference Cancelled)}
-}
-
-@conference{ruizprimo2020mapping,
-  keywords={conftalk},
-  author={Ruiz-Primo, Maria Araceli and Li, Min and Minstrell, Jim and Dong, Dongsheng and Kanopka, Klint and Hernandez, Phil},
-  title={Mapping the Characteristics of Contexts in Science Items: The Case of Forces and Motion Items},
-  year={2020},
-  organization={Annual Meeting of the American Educational Research Association (Conference Cancelled)}
-}
-
-@conference{munoznajar2019discontinuities,
-  keywords={conftalk},
-  author={Munoz-Najar Galvez, Sebastian and Kanopka, Klint and Alvero, Aaron},
-  title={Identifying (Dis)Continuities in EdTech’s Discourse of Invention},
-  year={2019},
-  organization={Text Analysis Across Domains}
-}
-
-@conference{kanopka2019defensive,
-  keywords={conftalk},
-  author={Kanopka, Klint},
-  title={Addressing Defensive Objections: Adversarial Examples in Automatic Essay Scoring},
-  year={2019},
-  organization={Annual Meeting of the American Educational Research Association}
-}
-
-@conference{ruizprimo2019contextualized,
-  keywords={conftalk},
-  author={Ruiz-Primo, Maria Araceli and Li, Min and Minstrell, Jim and Zhai, Xiaoming and Kanopka, Klint and Hernandez, Phil and Dong, Dongsheng},
-  title={Contextualized Science Assessments: Addressing the Use of Information and Generalization of Inferences of Students’ Performance},
-  year={2019},
-  organization={Annual Meeting of the American Educational Research Association}
-}
-
-@conference{zhai2019manyfacet,
-  keywords={conftalk},
-  author={Zhai, Xiaoming and Ruiz-Primo, Maria Araceli and Li, Min and Dong, Dongsheng and Kanopka, Klint and Hernandez, Phil and Minstrell, Jim},
-  title={Using Many-Facet Rasch Model to Examine Student Performance on Contextualized Science Assessment},
-  year={2019},
-  organization={Annual Meeting of the American Educational Research Association}
-}
-
-@conference{hernandez2019validity,
-  keywords={conftalk},
-  author={Hernandez, Phil and Ruiz-Primo, Maria Araceli and Zhai, Xiaoming and Kanopka, Klint},
-  title={Validity Study of Linked Items to Determine Student Fundamental ideas},
-  year={2019},
-  organization={Annual Meeting of the American Educational Research Association}
-}
-
-@conference{ruizprimo2019domain,
-  keywords={conftalk},
-  author={Ruiz-Primo, Maria Araceli and Li, Min and Minstrell, Jim and Zhai, Xiaoming and Dong, Dongsheng and Kanopka, Klint and Hernandez, Phil},
-  title={Testing the Generalization to the Domain Inference: The Use of Contextualized Clusters of Items},
-  year={2019},
-  organization={Annual Meeting of the National Council on Measurement in Education}
-}
-
-@conference{kanopka2019nonparallel,
-  keywords={conftalk},
-  author={Kanopka, Klint},
-  title={Diagnosing Non-Parallelism in Hierarchically Contextualized Physics Assessments},
-  year={2019},
-  organization={Annual Meeting of the National Association for Research in Science Teaching}
-}
-
-
-
